alignment issue in mobile view for manage deals in opportunity module

--- a/src/app/deals/manage-deals/manage-deals.component.css
+++ b/src/app/deals/manage-deals/manage-deals.component.css
@@ -31,3 +31,51 @@
 		width: auto;
 	}
 }
+@media only screen and (max-width:599px){
+    .form-group-mr{
+        margin-left: -15px !important;
+    }
+	.ml0-mr0{
+        margin-left: 0px;
+        margin-right: 0px;
+        padding-left: 20px !important;
+    }
+	.select-width{
+        width:100% !important
+    }
+}
+@media (max-width:768px){
+	.form-group-mr{
+		margin-left: 0px;
+	}
+	}
+	@media only screen and (max-width:479px){
+		.form-group-mr{
+			margin-left: -15px !important;
+		}
+		.ml0-mr0{
+			margin-left: 0px;
+			margin-right: 0px;
+			padding-left: 20px !important;
+		}
+	}
+	@media only screen and (max-width:320px){		
+	.ml0-mr0{
+        margin-left: 0px;
+        margin-right: 0px;
+        padding-left: 20px !important;
+    }
+}
+.select-width{
+    width:  196px;
+    height: 32px;
+}
+.button{
+	padding: 6px 14px;
+}
+.margin-right{
+	margin-right: 5px;
+}
+.mr0{
+	margin-right: 0px;
+}
